# anna

./: .env.example  .gitignore  Prizes.md  README.md  bun.lockb  package-lock.json  package.json  server.ts  start.sh  tsconfig.json  wrangler.jsonc
Integrations/: pyproject.toml
Integrations/MessageIntegration/: iMessage.py
Integrations/Spotify/: main.py  methods.py
Integrations/phone/: outbound.js  package-lock.json  readme.md
anna-integrations/: .cache  .env  README.md  example.py  make_room.py  openai_handler.py  pyproject.toml  router.py  spawn_tools.py  test-openai.py
anna-integrations/Spotify/: main.py  methods.py
anna-integrations/canvas/: main.py
anna-integrations/handControl/: handControl.py
anna-integrations/imessage/: iMessage.py  main.py
anna-integrations/phone/: bun.lockb  main.py  outbound.js  package.json
anna-integrations/websearch/: main.py
app/: root.tsx
app/components/: call.tsx
app/routes/: _index.tsx
app/utils/: createConversation.ts  endConversation.ts
desktop/: bun.lockb  index.html  index.test.html  load-react.js  main.js  package-lock.json  package.json  renderer.js  video-call.js
electron/: index.html  main.js  package-lock.json  package.json  renderer.js
