[tool.poetry]
name = "imessageintegration"
version = "0.1.0"
description = ""
authors = ["Keval Shah <keval.arhan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
py-imessage = "^1.7"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
mediapipe = "^0.10.21"
pyautogui = "^0.9.54"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
